add example and info ajax

--- a/index.ejs
+++ b/index.ejs
@@ -20,6 +20,16 @@
 			<div>
 				<a href="/">test jQuery</a>
 			</div>
+			<hr/>
+			<form action="/save/">
+				<input type="text" name="name" value="Ivan"/>
+					<select name="role">
+						<option>User</option>
+						<option>Admin</option>
+					</select>
+				<input type="submit"/>
+			</form>
+			<hr/>
 			<footer>
 				<p>&copy;copyright 2012</p>
 			</footer>
