--- a/_layout.ejs
+++ b/_layout.ejs
@@ -32,7 +32,7 @@
 	<!-- <script src="/media/js/jqury-3.1.1.js"></script> -->
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 
-	<script defer src="/media/js/main.js"></script>
+	<script defer src="/media/js/ajax.js"></script>
 
 </body>
 
